--- a/zadanie_7/index.html
+++ b/zadanie_7/index.html
@@ -10,28 +10,25 @@
 </head>
 
 <body>
-    <div class="container">
-        <di class="title">
-            <h1>TYTUŁ</h1>
-        </di>
-        <div class="tresc">
-            <aside class="aside_left">ASIDE LEFT</aside>
 
-            <div class="srodek">
-                <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores nemo non fugiat
-                    tenetur ea dolorem,
-                    voluptas sunt rerum, facere quidem quasi perferendis aspernatur dolorum, voluptates molestiae velit
-                    dolores
-                    vitae totam.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores nemo non fugiat
-                    tenetur ea dolorem.</p>
-            </div>
+    <header class="main-header">
+        <h1>Header</h1>
+    </header>
 
-            <aside class="aside_right">ASIDE RIGHT</aside>
-        </div>
+    <div class="main">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, alias exercitationem! Quidem doloribus
+            exercitationem rem velit eveniet fugit accusamus pariatur voluptatibus dolor amet numquam, saepe minus, illo
+            ipsa id sequi?</p>
+   
+    
+    <aside class="aside_left">Aside left</aside>
+    <aside class="aside_right">Aside right</aside>
+</div>
 
-        <footer class="footer">copyright</footer>
+    <footer class="main-footer">Footer</footer>
 
-    </div>
+
+
 </body>
 
 </html>
