--- a/zadanie-10/index.html
+++ b/zadanie-10/index.html
@@ -23,11 +23,10 @@
     </header>
     <nav class="main-menu">
         <ul>
-            <li class="menu-item"><a href="#contact">Contact</a></li>
-            <li class="menu-item"><a href="#portfolio">Portfolio</a></li>
-            <li class="menu-item"><a href="#about-me">About</a></li>
             <li class="menu-item"><a href="#header">Home</a></li>
-
+            <li class="menu-item"><a href="#about-me">About</a></li>
+            <li class="menu-item"><a href="#portfolio">Portfolio</a></li>
+            <li class="menu-item"><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -51,33 +50,41 @@
     <section id="portfolio">
         <div class="container-portfolio">
             <h2>Portfolio</h2>
+            <div class="containre-for-circle">
+                <div class="portfolio-circle">
+                    <div class="smalest-circle"></div>
+                </div>
+                <div class="portfolio-circle">
+                    <div class="smalest-circle"></div>
+                </div>
+                <div class="portfolio-circle">
+                    <div class="smalest-circle"></div>
+                </div>
+                <div class="portfolio-circle">
+                    <div class="smalest-circle"></div>
+                </div>
+            </div>
 
-            <div class="portfolio-circle">
-                <div class="smalest-circle1"></div>
-            </div>
-            <div class="portfolio-circle">
-                <div class="smalest-circle2"></div>
-            </div>
-            <div class="portfolio-circle">
-                <div class="smalest-circle3"></div>
-            </div>
-            <div class="portfolio-circle">
-                <div class="smalest-circle4"></div>
-            </div>
- 
-            
+
         </div>
     </section>
     <section id="contact">
-        <h2>Kontakt</h2>
-        <div class="container">
-            <address class="address">
-                Jan Nowak<br>
-                ul.Pokątna 2<br>
-                00-000 Warszawa<br>
-                tel. 123 456 789<br>
-            </address>
+
+        <div class="container-contact">
+            <h2>Kontakt</h2>
+
+            <div class="container-address">
+                <div id="circle-contact" class="circle-contact1"></div>
+                <div id="circle-contact" class="circle-contact2"></div>
+                <address class="address">
+                    Jan Nowak<br>
+                    ul.Pokątna 2<br>
+                    00-000 Warszawa<br>
+                    tel. 123 456 789<br>
+                </address>
+            </div>
         </div>
+
     </section>
 
 
